--- a/src/pages/history/detail/analytics/researcher/analyticsHistoryResearcher.scss
+++ b/src/pages/history/detail/analytics/researcher/analyticsHistoryResearcher.scss
@@ -10,6 +10,9 @@
             .button-page {
                 margin-right: 10px;
             }
+            .export-button {
+                display: flex;
+            }
         }
 
         .graph-box {
