--- a/src/pages/register/register.css
+++ b/src/pages/register/register.css
@@ -1,16 +1,13 @@
-#register {
+#registor {
     font-family: 'Noto Sans Thai', sans-serif;
-    background-image: url(https://images.unsplash.com/photo-1508615070457-7baeba4003ab?auto=format&amp;fit=crop&amp;q=80&amp;w=1770&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-image: url('src/assets/img/BG-2.svg');
+    background-attachment: fixed;
+    backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(3px);
+    background-size: cover;
     .container {
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 50%;
-        transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-        -moz-transform: translateY(-50%);
-        -webkit-transform: translateY(-50%);
-        -o-transform: translateY(-50%);
+        margin-bottom: 3.5rem;
+        margin-top: 3.5rem;
         .role-select {
             border-color: var(--bs-border-color);
         }
