--- a/src/components/loading/loading.scss
+++ b/src/components/loading/loading.scss
@@ -21,6 +21,7 @@
     .modal-content {
       background-color: #313132;
       margin: auto;
+      max-width: 300px;
       padding: 20px;
       border: 1px solid #888;
       width: 20%;
