--- a/src/components/login/loginComponent.scss
+++ b/src/components/login/loginComponent.scss
@@ -1,10 +1,12 @@
 #login {
-    background-image: url(https://images.unsplash.com/photo-1451187580459-43490279c0fa?q=80&amp;w=1772&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-image: url('../src/assets/img/BG-1.svg');
     background-attachment: fixed;
     backdrop-filter: blur(3px);
     -webkit-backdrop-filter: blur(3px);
     background-size: cover;
-    .card {
+    .login-card {
+      margin-top: 4.7rem;
+      margin-bottom: 4.7rem;
       background-color: rgba(255, 255, 255, .5);
       .password-label {
         display: flex;
