--- a/src/index.css
+++ b/src/index.css
@@ -126,7 +126,7 @@ body > #root > div {
   .btnNoBorders:active,
   .btnNoBorders:focus {
     outline: 0;
-    -moz-outline-style: none
+    outline-style: none
   }
   
   .trashBtn {
