assets path fix

--- a/src/components/otp/otpComponent.scss
+++ b/src/components/otp/otpComponent.scss
@@ -1,5 +1,5 @@
 #otpComponent {
-  background-image: url('src/assets/img/BG-3.svg');
+  background-image: url('./src/assets/img/BG-3.svg');
   background-size: cover;
   .otp-image {
     width: 300px;
