--- a/src/pages/resetPassword/requestReset/requestReset.scss
+++ b/src/pages/resetPassword/requestReset/requestReset.scss
@@ -1,5 +1,5 @@
 #requestReset {
-  background: url(../src/assets/img/BG-1.svg);
+  background: url(../../../assets/img/BG-1.svg);
   background-size: cover;
 
   .aiga-logo {
