--- a/src/pages/resetPassword/reset/resetPassword.scss
+++ b/src/pages/resetPassword/reset/resetPassword.scss
@@ -1,5 +1,5 @@
 #resetPassword {
-  background: url(../src/assets/img/BG-1.svg);
+  background: url(../../../assets/img/BG-1.svg);
   section {
     font-family: "Noto Sans Thai", sans-serif;
     .card {
