--- a/src/components/login/loginComponent.scss
+++ b/src/components/login/loginComponent.scss
@@ -1,5 +1,5 @@
 #login {
-    background-image: url('../src/assets/img/BG-1.svg');
+    background-image: url(../../assets/img/BG-1.svg);
     background-attachment: fixed;
     backdrop-filter: blur(3px);
     -webkit-backdrop-filter: blur(3px);
