--- a/src/pages/history/create/createHistoryPatient.scss
+++ b/src/pages/history/create/createHistoryPatient.scss
@@ -1,4 +1,8 @@
 #createHistoryPatient {
+  .header-wrap {
+    display: flex;
+    justify-content: space-between;
+  }
   .description-box {
     .description-header {
       float: left;
