--- a/src/components/modal/POGS/pogsModal.scss
+++ b/src/components/modal/POGS/pogsModal.scss
@@ -132,9 +132,11 @@
                       }
                       &.description {
                         width: 50%;
+                        color: black;
                       }
                       &.insterested-phase {
                         width: 30%;
+                        color: black;
                       }
                     }
                   }
