--- a/src/pages/patient/edit/PatientEdit.css
+++ b/src/pages/patient/edit/PatientEdit.css
@@ -21,6 +21,13 @@
                         color: var(--bs-body-color);
                     }
                 }
+                .date-picker {
+                    display: flex;
+                    flex-direction: column;
+                    .react-datepicker__day--outside-month {
+                        visibility: hidden;
+                    }
+                }
 
                 .form-label {
                     span {
